fixed the bad spacing

--- a/mystyle.css
+++ b/mystyle.css
@@ -6,8 +6,12 @@ header
   background-size: cover;
   position: relative;
   margin-bottom: 4em;
+  top: 0; /* Add this line */
 }
-
+nav
+{
+  
+}
 header::before
 {
   content: '';
